MB-60795: Use the steady clock to run manageConnections()

Caused by MB-60525, where we run manageConnections() an an interval
different from the ConnManager::run() interval.

The condition for when the run should use steady_clock, which is a
reliable monotonic clock, not ep_uptime_now() which is our clock driven
by the Regulator.

The Regulator is stopped after a shutdown message is received. While
ConnManager will continue to run, it will never call manageConnections()
as the time returned by ep_uptime_now() will not advance.

This can cause shutdown to hang. While we do call manageConnections()
from DcpConnMap::shutdownAllConnections during shutdown manually, that
only cleans up connections which are already dead. It won't move
connections to the dead queue itself.

Change-Id: I1e8782a5b68b275a550d5b15cbae467be987bc20
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/205779
Reviewed-by: Paolo Cocchi <paolo.cocchi@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>
Well-Formed: Restriction Checker